--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,318 @@
-/* preadded css */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
+/* global styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --clr-darkGray: hsl(0, 0%, 17%);
+  --clr-gray: hsl(0, 0%, 59%);
+  --clr-white: hsl(0, 0%, 100%);
+  --radius: 0.5rem;
+  --spacing: 0.5rem;
+  --ff-primary: "Rubik", sans-serif;
+}
+html {
+  font-size: 18px;
+}
+body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
+/* 
+////////////////////
+Header
+///////////////////
+ */
+.header {
+  background: url(./images/pattern-bg.png);
+  width: 100%;
+  height: 40%;
+  /* position: relative; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  /* padding-top: 5rem; */
+  position: relative;
+}
+.header h2 {
+  margin-bottom: 1rem;
+  color: var(--clr-white);
+  font-family: var(--ff-primary);
+  font-weight: 500;
+  position: absolute;
+  top: 10%;
+}
+.input {
+  width: 85%;
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input input {
+  width: 80%;
+  font-size: 1rem;
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border: none;
+  margin-right: -0.5rem;
+  padding: 0.75rem 0;
+  padding-left: 0.5rem;
+}
+.input input:focus {
+  outline: none;
+}
+.input input::placeholder {
+  font-size: 12px;
+}
+.input[type="text"]::placeholder {
+  /* font-size: 1px; */
+  text-align: center;
+}
+.input button {
+  width: 20%;
+  font-size: 2.5rem;
+  cursor: pointer;
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+  border: none;
+  background-color: black;
+  margin-left: 0.5rem;
+}
+.submitbtn:hover {
+  background-color: var(--clr-darkGray);
+}
+
+img {
+  margin-bottom: 0.3rem;
+}
+
+/* 
+////////////////////
+Details
+///////////////////
+ */
+.details {
+  width: 80%;
+  height: 80%;
+
+  position: absolute;
+  bottom: -40%;
+  z-index: 999;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: var(--radius);
+  padding: 1rem 1rem;
+}
+.details h3 {
+  color: black;
+  margin-top: 0.2rem;
+  font-family: var(--ff-primary);
+  font-weight: 500;
+  font-size: 14px;
+}
+.address,
+.location,
+.timezone,
+.isp {
+  /* margin: 0.5rem 0; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: var(--ff-primary);
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  font-size: 10px;
+  font-family: var(--ff-primary);
+  font-weight: 700;
+  color: var(--clr-gray);
+}
+/* 
+////////////////////
+Map
+///////////////////
+ */
+#mapid {
+  width: 100%;
+  height: 60%;
+}
+/* 
+******************
+******************
+Desktop view
+******************
+******************
+ */
+@media screen and (min-width: 600px) {
+  /* 
+////////////////////
+Header
+///////////////////
+ */
+  .header {
+    height: 35%;
+  }
+  .header h2 {
+    margin-bottom: 1.5rem;
+  }
+  .input {
+    width: 40%;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .input input {
+    width: 90%;
+  }
+
+  .input button {
+    width: 10%;
+    font-size: 2.39rem;
+  }
+  .input input::placeholder {
+    font-size: 16px;
+  }
+  img {
+    margin-bottom: 0.4rem;
+  }
+  /* 
+////////////////////
+Details 
+///////////////////
+ */
+  .details {
+    width: 80%;
+    height: 60%;
+    position: absolute;
+    bottom: -30%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    border-radius: var(--radius);
+    padding-top: 0.5rem;
+    padding-bottom: 1.5rem;
+  }
+  .details h3 {
+    margin-top: 1rem;
+    font-size: inherit;
+  }
+
+  .vl {
+    border: 1px solid #ececec;
+    background-color: #ececec;
+    height: 65px;
+    margin-top: 0.5rem;
+    margin-right: 0.5rem;
+  }
+  .address,
+  .location,
+  .timezone,
+  .isp {
+    /* margin: 0.5rem 0; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    font-family: var(--ff-primary);
+  }
+  p {
+    font-size: 10px;
+    font-family: var(--ff-primary);
+    font-weight: 700;
+    color: var(--clr-gray);
+  }
+  /* 
+////////////////////
+Map
+///////////////////
+ */
+  #mapid {
+    width: 100%;
+    height: 65%;
+  }
+  .modal p {
+    font-size: 1rem;
+  }
+} /* preadded css */
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--clr-white);
+  width: 100%;
+  background-color: #222;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--clr-white);
+}
+/* MODAL */
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(#e66465, #9198e5);
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
+  padding: 1rem;
+  color: white;
+  font-weight: bold;
+  font-family: var(--ff-primary);
+
+  z-index: 3000;
+}
+.modal p {
+  color: white;
+  font-size: 0.75rem;
+  margin-top: 1rem;
+}
+.modal__btn--close {
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  float: right;
+  border: none;
+  font-size: 1.5rem;
+}
+.modal__btn--close:hover {
+  color: rgb(184, 40, 40);
+}
+
+/* OVERLAY */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(20px);
+  z-index: 2000;
+}
+/* HIDDEN*/
+.hidden {
+  display: none;
 }
